--- a/01.products_review.md
+++ b/01.products_review.md
@@ -11,13 +11,16 @@
 ## 요구사항에 따른 기능 동작 확인
 
 ### 1. 모바일 환경 구성
-예) 모바일 사파리, 삼성 브라우저에서 접속시 정상 동작함을 확인할 수 있습니다.
+- 다양한 모바일 브라우저(Safari, Chrome, Samsung Browser)에서 정상적으로 작동 확인.
+- 반응형 웹으로 테스트 완료.
 
 ### 2. 신발 상품 사진
+- 고해상도 이미지 사용.
+- 디자인 시안을 참고하여 사진 비율과 배치를 최적화.
 
 ### 3. 장바구니 담기 기능
+- 장바구니 버튼 클릭 시 헤더에 실시간으로 업데이트되는 상품 개수.
+- 로컬 스토리지 또는 API를 통해 장바구니 데이터 연동.
 
 ### 4. 배포 URL
-
-
-... 세부적인 기능을 추가로 작성해주세요.
+- 작업 완료 후 테스트 URL: [https://example.com/test](https://example.com/test)
