--- a/01.products_docs.md
+++ b/01.products_docs.md
@@ -2,53 +2,35 @@
 
 ## 프로젝트 개요
 
-- 프로젝트 목표와 주요 기능에 대한 간략한 설명
-- 참여한 팀원
-
-예시: 이 상품 목록 페이지는 고객에게 다양한 상품을 표시하고, 상품을 선택하여 장바구니에 추가할 수 있는 기능을 제공합니다.
+- **목표**: 고객에게 다양한 상품을 제공하며, 상품 선택 및 장바구니 추가 기능 구현.
+- **참여 팀원**: Oh Kyungha, 김철수, 이영희.
 
 ## 개발 환경
 
-사용한 프레임워크, 라이브러리, 언어 등
-
-예시: React 17.0, JavaScript ES6
+- **프레임워크**: React 17.0
+- **언어**: JavaScript (ES6)
+- **라이브러리**: React Router, Axios
 
 ## 설치 및 실행 방법
 
-프로젝트를 로컬에서 실행하기 위한 설치 방법과 명령어
-
-예시:
-```
-npm install
-npm start
-```
+npm install npm start
 
 ## 컴포넌트 구조
 
-주요 컴포넌트들의 구조와 역할
-
-예시:
-
-- `ProductList`: 상품 목록을 보여줍니다.
-- `ProductCard`: 각 상품의 정보를 보여줍니다.
+- **ProductList**: 상품 목록 표시
+- **ProductCard**: 개별 상품 정보 표시
+- **Cart**: 장바구니 관리
 
 ## 테스트 방법
 
-테스트 케이스 및 실행 방법
-
-예시:
-```
 npm test
-```
 
 ## 유의사항 및 알려진 이슈
 
-버그, 해결하지 못한 문제, 추가하고 싶은 기능 등
+- Safari 브라우저에서 폰트 스타일이 정상적으로 표시되지 않는 문제 있음.
+- 모바일 최적화 개선 필요.
 
-예시: 현재 safari 브라우저에서 접속시에는 폰트가 다르게 보이는 이슈가 있습니다.
+## 참고 자료
 
-## 추가 항목
-
-문서화에 추가하고 싶은 기타 내용
-
-예시: 참고한 자료 등
+- 디자인 시안: [Figma 링크](#)
+- React 공식 문서: [https://reactjs.org](https://reactjs.org)
